# wikilib

./: .gitignore  CMakeLists.txt  README.md
cmake/: Dependencies.cmake  wikilibConfig.cmake.in
examples/: CMakeLists.txt  dump_example.cpp  extract_pages_example.cpp  parse_example.cpp  plain_text_example.cpp  template_example.cpp
include/: wikilib.hpp
include/wikilib/core/: line_reader.h  string_pool.h  text_utils.hpp  types.h  unicode_utils.h
include/wikilib/dump/: bz2_line_reader.h  bz2_stream.h  dump_path.h  dump_reader.h  index_chunker.h  index_parser.h  page_handler.h  xml_reader.h
include/wikilib/markup/: ast.h  heading.h  parser.h  section_tree.h  tokenizer.h  wikitext_visitor.h
include/wikilib/output/: json_writer.h  plain_text.h
include/wikilib/templates/: template_expander.h  template_parser.h
src/core/: line_reader.cpp  string_pool.cpp  text_utils.cpp  unicode_utils.cpp
src/dump/: bz2_line_reader.cpp  bz2_stream.cpp  dump_path.cpp  dump_reader.cpp  index_chunker.cpp  index_parser.cpp  page_handler.cpp  xml_reader.cpp
src/markup/: ast.cpp  heading.cpp  parser.cpp  section_tree.cpp  tokenizer.cpp  wikitext_visitor.cpp
src/output/: json_writer.cpp  plain_text.cpp
src/templates/: template_expander.cpp  template_parser.cpp
tests/: CMakeLists.txt
tests/core/: test_line_reader.cpp  test_string_pool.cpp  test_text_utils.cpp  test_unicode_utils.cpp
tests/dump/: test_dump_path.cpp  test_index_chunker.cpp
tests/markup/: test_ast.cpp  test_heading.cpp  test_parser.cpp  test_section_tree.cpp  test_tokenizer.cpp  test_tokenizer_utils.cpp
tests/templates/: test_complex_templates.cpp  test_template_parser.cpp
